Center `preview` on phone screen + fix layout shift (#13)
* Fix `.preview` layout shift on page refresh

* Align the logo to the center of the phone screen

--- a/view/preview/index.css
+++ b/view/preview/index.css
@@ -7,16 +7,33 @@
   pointer-events: none;
 }
 
+@media (orientation: portrait) {
+  .preview__graphics {
+    /* Align the logo to the vertical center in browsers without `svh` unit support */
+    margin-top: -15vh;
+  }
+
+  @supports (height: 1svh) {
+    .preview__graphics {
+      margin-top: 0;
+      height: 300dvh;
+    }
+  }
+}
+
 .preview__graphics circle {
   transform: translateZ(0);
 }
 
 .preview__scroller {
-  transform: scale(0.2) translateZ(0);
+  transform: translateZ(0);
   transform-origin: 50% 50vh;
   opacity: 0;
-  animation: fadeIn 1s cubic-bezier(0, 0.75, 0.25, 1) forwards;
-  top: 0;
+  animation-name: fadeIn;
+  animation-duration: .9s;
+  animation-delay: .15s; /* Prevent layout shift on page loading */
+  animation-timing-function: cubic-bezier(0, 0.75, 0.25, 1);
+  animation-fill-mode: forwards;
 }
 
 @keyframes fadeIn{
